# RCade

./: .gitignore  Cargo.toml  README.md  bun.lockb  bun.nix  dev-menu.ts  flake.nix  justfile  obs-credits.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.claude/: settings.local.json
.github/: RELEASE.md
.github/workflows/: deploy-menu.yaml  deploy-web-content.yaml  deploy-web.yaml  (+4 more)
.husky/: pre-push
action-deploy/: .gitignore  CLAUDE.md  README.md  package.json
api/: README.md  package.json  tsconfig.json
cabinet/: .gitignore  README.md  package.json  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vite.config.ts
cli/: README.md  bin.ts  index.ts  package.json  tsconfig.json
client/: package.json
create/: README.md  bin.ts  package.json
engine/: README.md  package.json  tsconfig.build.json  tsconfig.json
log/: .gitignore  README.md  index.ts  package.json  tsconfig.json
machines/: .gitignore  README.md
menu/: package.json  rcade.manifest.json
nix/: .gitignore  README.md
plugins/: tsconfig.json
plugins/sleep/clients/rust/: Cargo.toml
plugins/sleep/clients/rust/src/: lib.rs
runtime/: README.md  package.json
sdk/: tsconfig.json
secrets/: cabinet-secrets-env.age  secrets.nix  wifi-psk.age
vite-plugins/: package.json  tsconfig.json
web/: .env.example  .prettierignore  README.md  bad_decisions.md  bun.lockb  cors.json  notes.md  package.json  quick-lint-js.config  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  wrangler.toml
web-content/: package.json  wrangler.toml
(+332 files in other folders)
