[package]
homepage = "https://rcade.recurse.com"
name = "rcade-plugin-sleep"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "The Recurse RCade Spinners Sleep"
repository = "https://github.com/fcjr/RCade"

[dependencies]
js-sys = "0.3.83"
rcade-sdk = "0.2.0"
wasm-bindgen = "0.2.106"
web-sys = "0.3.83"
